Fix helper position on mobile.

--- a/assets/css/settings-base.css
+++ b/assets/css/settings-base.css
@@ -126,11 +126,20 @@
 		grid-template-columns: 1fr;
 	}
 
+	#hcaptcha-options table tbody tr {
+		position: relative;
+	}
+
 	#hcaptcha-options fieldset + .helper::before {
 		transform: translate(0px, -0.7em);
 	}
 
 	#hcaptcha-options fieldset + .helper .helper-content {
 		transform: translate(0, 25px);
+		width: 100%;
+	}
+
+	#hcaptcha-options .helper {
+		z-index: 1;
 	}
 }
